homeautomation/hass-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hass
    app.kubernetes.io/instance: homeautomation
  name: hass
  namespace: homeautomation
spec:
  host: homeassistant.apps.snolab.csfreak.com
  port:
    targetPort: hass-http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: hass
    weight: 100
  wildcardPolicy: None
